--- a/index.html
+++ b/index.html
@@ -17,8 +17,29 @@
         </header>
         <main>
             <script src="js/app.js"></script>
-            <p>hello there, it's <strong>humam mkhzoumi</strong> from jordan ,im a 27 year's old civil engineer and software developer, I studied civil engineering at al albayt university but my ambition was all about programming so i studied advance programming at ASAC code fellows for 6 months and im now a software developer.</p>
+            <p>hello there, it's <strong>humam mkhzoumi</strong> from jordan, im a 27 year's old civil engineer and software developer, I studied civil engineering at al albayt university but my ambition was all about programming so i studied advance programming at ASAC code fellows for 6 months and im now a software developer. here is my certificates:</p>
+            <ul>
+
+                 <li><p>software developer certification from ASAC</p></li>
+                 <li><p>bsc of civil engineering from al albayt universift</p></li>
+
+            </ul>
             <p>this webpage is designed to show the <strong>user</strong> some informations about <strong>me,</strong></p>
+             <p>my top ten perfumes:</p>
+            <ol>
+
+                <li>creed aventus</li>
+                <li>dior sauvage</li>
+                <li>versace eros</li>
+                <li>channel blue</li>
+                <li>one million</li>
+                <li>invictus</li>
+                <li>spicebomb</li>
+                <li>bvlgari man in black</li>
+                <li>bad boy</li>
+                <li>Tom Ford</li>
+
+            </ol>
             <p id="me"><a href="https://github.com/Mkhzoumi"><button> contact me</button></a></p>
         </main>
         <footer>
