some css were added to about me page

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         </header>
         <main>
             <script src="js/app.js"></script>
-            <p>hello there, it's <strong>humam mkhzoumi</strong> from jordan, im a 27 year's old civil engineer and software developer, I studied civil engineering at al albayt university but my ambition was all about programming so i studied advance programming at ASAC code fellows for 6 months and im now a software developer. here is my certificates:</p>
+            <p class="aboutme">hello there, it's <strong>humam mkhzoumi</strong> from jordan, im a 27 year's old civil engineer and software developer, I studied civil engineering at al albayt university but my ambition was all about programming so i studied advance programming at ASAC code fellows for 6 months and im now a software developer. here is my certificates:</p>
             <ul>
 
                  <li><p>software developer certification from ASAC</p></li>
-                 <li><p>bsc of civil engineering from al albayt universift</p></li>
+                 <li><p>bsc of civil engineering from al albayt university</p></li>
 
             </ul>
-            <p>this webpage is designed to show the <strong>user</strong> some informations about <strong>me,</strong></p>
+            <p class="aboutme">this webpage is designed to show the <strong>user</strong> some informations about <strong>me,</strong></p>
              <p>my top ten perfumes:</p>
             <ol>
 
